Fix minor css word bleed issue in top menu

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -86,8 +86,16 @@ section.tabs-component-panel::before {
     margin-top: -10em;
 }
 
-.nav-links{
-    margin-right: 10%;
-	margin-left: 10%;
-	float: left;
+@media (min-width: 1060px) {
+	.nav-links{
+		margin-right: 10%;
+		margin-left: 10%;
+		float: left;
+	}
+}
+
+@media (min-width: 500px) and (max-width: 720px) {
+	.sidebar{
+		width: 40%;
+	}
 }
